# OpenCV-Courses

./: .gitignore  CMakeLists.txt  README.md
.conan/: conanfile.py
.github/workflows/: cmake-single-platform.yml
applications/: CMakeLists.txt
applications/Assignment2/: CMakeLists.txt  main.cpp
applications/Assignment3/: CMakeLists.txt  main.cpp
applications/adReplacement/: CMakeLists.txt  main.cpp
applications/annotateImages/: CMakeLists.txt  main.cpp
applications/autoFocusAssignment/: CMakeLists.txt  main.cpp
applications/backgroundRemovalUsingGrabcut/: CMakeLists.txt  Interface.cpp  Interface.h  main.cpp
applications/basicImageOperations/: CMakeLists.txt  main.cpp
applications/bitwiseOperations/: CMakeLists.txt  main.cpp
applications/blobDetection/: CMakeLists.txt  main.cpp
applications/camShiftTracking/: CMakeLists.txt  main.cpp
applications/cannyEdgeDetector/: CMakeLists.txt  main.cpp
applications/chromaKeying/: CMakeLists.txt  main.cpp
applications/coinDetection/: CMakeLists.txt  main.cpp
applications/colorConversionAssignment/: CMakeLists.txt  main.cpp
applications/colorSpaces/: CMakeLists.txt  main.cpp
applications/colorTransformations/: CMakeLists.txt  main.cpp
applications/connectedComponentAnalysis/: CMakeLists.txt  main.cpp
applications/contours/: CMakeLists.txt  main.cpp
applications/creatingAPanorama/: CMakeLists.txt  main.cpp
applications/deepLearningBasedFaceDetectionSSD/: CMakeLists.txt  main.cpp
applications/deepLearningBasedHumanPoseDetectionOpenPose/: CMakeLists.txt  main.cpp
applications/deepLearningBasedImageClassification/: CMakeLists.txt  main.cpp
applications/deepLearningBasedObjectDetectionSSD/: CMakeLists.txt  main.cpp
applications/deepLearningBasedObjectDetectionYolo/: CMakeLists.txt  main.cpp
applications/detectionAndTracking/: CMakeLists.txt  main.cpp
applications/differentFeatureMatchingAlgorithms/: CMakeLists.txt  main.cpp
applications/documentScanner/: CMakeLists.txt  main.cpp
applications/erosionDilation/: CMakeLists.txt  main.cpp
applications/eyeGlassClassifier/: CMakeLists.txt  main.cpp
applications/faceBlending/: CMakeLists.txt  main.cpp
applications/faceDetection/: CMakeLists.txt  main.cpp
applications/featureBasedAlignment/: CMakeLists.txt  main.cpp
applications/geometricTransforms/: CMakeLists.txt  main.cpp
applications/gettingStarted/: CMakeLists.txt  main.cpp
applications/highDynamicRangeImaging/: CMakeLists.txt  main.cpp
applications/houghTransforms/: CMakeLists.txt  main.cpp
applications/imageAlignment/: CMakeLists.txt  main.cpp
applications/imageAsAMatrix/: CMakeLists.txt  macros.h  main.cpp
applications/imageFiltering/: CMakeLists.txt  main.cpp
applications/imageGradients/: CMakeLists.txt  main.cpp
applications/imageInpainting/: CMakeLists.txt  main.cpp
applications/imageSmoothing/: CMakeLists.txt  main.cpp
applications/implementingMorphologicalOperations/: CMakeLists.txt  main.cpp
applications/kalmanFilterTracking/: CMakeLists.txt  main.cpp
applications/mathematicalOperations/: CMakeLists.txt  main.cpp
applications/meanShiftTracking/: CMakeLists.txt  main.cpp
applications/morphAssignment/: CMakeLists.txt  main.cpp
applications/multiImagePanorama/: CMakeLists.txt  main.cpp
applications/multiObjectTracking/: CMakeLists.txt  main.cpp
applications/objectDetection/: CMakeLists.txt  main.cpp
applications/objectTracking/: CMakeLists.txt  main.cpp
applications/openingClosing/: CMakeLists.txt  main.cpp
applications/opticalFlowLucasKanade/: CMakeLists.txt  main.cpp
applications/orbFeatureDetector/: CMakeLists.txt  main.cpp
applications/pedestrianDetection/: CMakeLists.txt  main.cpp
applications/project1/: CMakeLists.txt  main.cpp
applications/qrCodeDetector/: CMakeLists.txt  main.cpp
applications/seamlessCloning/: CMakeLists.txt  main.cpp
applications/skinSmoothing/: CMakeLists.txt  main.cpp
applications/sungalssesFilter/: CMakeLists.txt  main.cpp
applications/sungalssesFilterExtended/: CMakeLists.txt  main.cpp
applications/testApp/: CMakeLists.txt  main.cpp
applications/thresholding/: CMakeLists.txt  main.cpp
applications/trackbarAsController/: CMakeLists.txt  main.cpp
applications/useMouseToCropRoi/: CMakeLists.txt  main.cpp
applications/usingKeyboardAsInput/: CMakeLists.txt  main.cpp
applications/usingMouseForAnnotation/: main.cpp
applications/videoIO/: CMakeLists.txt  main.cpp
applications/videoStabilization/: CMakeLists.txt  main.cpp
cmake/: CompilerFlags.cmake  SuperBuild.cmake
cmake/.NetSupport/: bakup.txt
cmake/Common/: CopyRuntimeDependencies.cmake  VersonUpdate.cmake
cmake/Templates/: AllIncludes.h.in
libraries/: CMakeLists.txt
libraries/cvHelper/: CMakeLists.txt
libraries/cvHelper/include/: GUI.h  macros.h
libraries/cvHelper/src/: GUI.cpp
scripts/: CreateProjectMsvc.bat  InitializeVariables.bat  OpenVisualStudio.bat
