add_subdirectory( annotateImages )
add_subdirectory( Assignment2 )
add_subdirectory( Assignment3 )
add_subdirectory( autoFocusAssignment )
add_subdirectory( basicImageOperations )
add_subdirectory( blobDetection )
add_subdirectory( cannyEdgeDetector )
add_subdirectory( coinDetection )
add_subdirectory( colorConversionAssignment )
add_subdirectory( colorSpaces )
add_subdirectory( colorTransformations )
add_subdirectory( connectedComponentAnalysis )
add_subdirectory( contours )
add_subdirectory( bitwiseOperations )
add_subdirectory( erosionDilation )
add_subdirectory( faceBlending )
add_subdirectory( gettingStarted )
add_subdirectory( highDynamicRangeImaging )
add_subdirectory( houghTransforms )
add_subdirectory( imageFiltering )
add_subdirectory( imageGradients )
add_subdirectory( imageInpainting )
add_subdirectory( imageSmoothing )
add_subdirectory( implementingMorphologicalOperations )
add_subdirectory( mathematicalOperations )
add_subdirectory( morphAssignment )
add_subdirectory( openingClosing )
add_subdirectory( project1 )
add_subdirectory( seamlessCloning )
add_subdirectory( qrCodeDetector )
add_subdirectory( sungalssesFilter )
add_subdirectory( testApp )
add_subdirectory( thresholding )
add_subdirectory( trackbarAsController )
add_subdirectory( useMouseToCropRoi )
add_subdirectory( usingMouseForAnnotation )
add_subdirectory( usingKeyboardAsInput )
add_subdirectory( videoIO )