add_subdirectory( adReplacement )
add_subdirectory( annotateImages )
add_subdirectory( Assignment2 )
add_subdirectory( Assignment3 )
add_subdirectory( autoFocusAssignment )
add_subdirectory( backgroundRemovalUsingGrabcut )
add_subdirectory( basicImageOperations )
add_subdirectory( blobDetection )
add_subdirectory( camShiftTracking )
add_subdirectory( cannyEdgeDetector )
add_subdirectory( chromaKeying )
add_subdirectory( coinDetection )
add_subdirectory( colorConversionAssignment )
add_subdirectory( colorSpaces )
add_subdirectory( colorTransformations )
add_subdirectory( connectedComponentAnalysis )
add_subdirectory( contours )
add_subdirectory( creatingAPanorama )
add_subdirectory( deepLearningBasedFaceDetectionSSD )
add_subdirectory( deepLearningBasedImageClassification )
add_subdirectory( deepLearningBasedObjectDetectionSSD )
add_subdirectory( deepLearningBasedObjectDetectionYolo )
add_subdirectory( differentFeatureMatchingAlgorithms )
add_subdirectory( bitwiseOperations )
add_subdirectory( erosionDilation )
add_subdirectory( eyeGlassClassifier )
add_subdirectory( faceBlending )
add_subdirectory( faceDetection )
add_subdirectory( featureBasedAlignment )
add_subdirectory( geometricTransforms )
add_subdirectory( gettingStarted )
add_subdirectory( highDynamicRangeImaging )
add_subdirectory( houghTransforms )
add_subdirectory( imageAlignment )
add_subdirectory( imageFiltering )
add_subdirectory( imageGradients )
add_subdirectory( imageInpainting )
add_subdirectory( imageSmoothing )
add_subdirectory( implementingMorphologicalOperations )
add_subdirectory( kalmanFilterTracking )
add_subdirectory( mathematicalOperations )
add_subdirectory( meanShiftTracking )
add_subdirectory( morphAssignment )
add_subdirectory( multiImagePanorama )
add_subdirectory( multiObjectTracking )
add_subdirectory( objectDetection )
add_subdirectory( objectTracking )
add_subdirectory( openingClosing )
add_subdirectory( opticalFlowLucasKanade )
add_subdirectory( orbFeatureDetector )
add_subdirectory( pedestrianDetection )
add_subdirectory( project1 )
add_subdirectory( seamlessCloning )
add_subdirectory( qrCodeDetector )
add_subdirectory( sungalssesFilter )
add_subdirectory( testApp )
add_subdirectory( thresholding )
add_subdirectory( trackbarAsController )
add_subdirectory( useMouseToCropRoi )
add_subdirectory( usingMouseForAnnotation )
add_subdirectory( usingKeyboardAsInput )
add_subdirectory( videoIO )
add_subdirectory( videoStabilization )